Fixed navigation spacing didnt align when decreasing width of display

--- a/css/index.css
+++ b/css/index.css
@@ -179,7 +179,7 @@ header.navigation nav {
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  width: 45%;
+  width: 50%;
   margin-top: 20px;
   margin-bottom: 11px;
 }
