--- a/less/navigation.less
+++ b/less/navigation.less
@@ -10,7 +10,7 @@ header.navigation {
 
     nav {
         .flex-settings(@justify-content:space-evenly);
-        width: 45%;
+        width: 50%;
         margin-top: 20px;
         margin-bottom: 11px;
         @media @phone {
